- BugFix: Incorrect CQ zone saved to DataBase (Closes #666) (EA5WA)
- BugFix: FO/x calls are not properly identified/stored (Closes #677) (EA5WA)
- BugFix: Minor CQz & ITUz bugfixes that could, potentially accept CQ or ITU zones being 0.
- Bugfix: Several fields do not meet ADIF specification (Closes #669)
- Bugfix: DX-Cluster activity file can't be edit with normal txt file. (Closes #682)
- Translations: Danish (TNX Peter), Russian (YL3GBC), Spanish (EA4K), Ukrainian (YL3GBC)

Dec 2023 - 2.3.3
- WIP: Started to reduce the possibility of SQLi with the use of prepared statements.
- Bugfix: Sat QSO edit was not showing the worked SAT (Closes #645)
- Bugfix: After editing a QSO, the restore was not working properly. (Closes #649)
- Bugfix: In Sat QSO, still not selected band may make the QSO unusable. (Closes #651)
- Bugfix: All Gridsquares are now listed when Export to ADIF is used. (Closes #514)
- Bugfix: Selecting a sat with a new band made the bandcombobox unusable. #613
- Bugfix: F1 (online manual link fixed (Closes #627) (TNX ikbenkous)
- Bugfix: 'Usage' does not properly handle arguments, print newlines or return status codes (Closes #625) (TNX ikbenkous)

- Enhancement: Improved the Frequency entry. (Closes #622) (TNX ikbenkous)
- Enhancement: Use a good discriminator in header guards (Closes #624) (TNX ikbenkous)

Jun 2023 - 2.3.2
- Bugfix: KLog was not starting when started in clean installations.(Closes #599)(TNX cwross)

Jun 2023 - 2.3.1
- Bugfix: When exporting a log, selecting the stationcallsign has no efect on the qsos shown
- Bugfix: When no validating callsigns, some ADIF fields were exported even if they were empty.
- Bugfix: In some conditions, not identified propagation modes were exported as "NO". (Closes #518)
- Bugfix: VUCC_GRIDS validation was not properly done.
- Bugfix: It was not possible to select the second pair of freqs of a Sat (Closes #483)