@@ -42,6 +42,7 @@
 #include <QtDebug>
 #include "locator.h"
 #include "klogdefinitions.h"
+#include "adif.h"
 //#include "dataproxy_sqlite.h"
 
 class Utilities : public QObject {
@@ -163,6 +164,11 @@ public:
     // Creates the Cabrillo DATE & TIME (http://wwrof.org/cabrillo/)
     QString getCabrilloDateFromQDate(const QDate &_d);          // Will produce the Cabrillo DATE format: "YYYY-MM-DD"
     QString getCabrilloTimeFromQDateTime(const QDateTime &_d);  // Will produce the Cabrillo TIME format: "HHMM"
+
+    // Parse QSO_COMPLETE from ADIF
+    QString getQSO_CompleteFromADIF(const QString &_s);     // Expect a string and returns 1char string for DB
+    QString getADIFQSO_CompleteFromDB(const QString &_s);   // Returns the ADIF QSO_COMPLETE
+
 
     QString getOnlineServiceName(OnLineProvider _service);
 
